--- a/Qmos.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/Qmos.UI/Views/Shared/_HeaderPartial.cshtml
@@ -9,7 +9,7 @@
     </div>
     <ul class="nav navbar-top-links navbar-right">
         <li>
-            <span class="m-r-sm text-muted welcome-message">Bienvenido a Qmos</span>
+            <span class="m-r-sm text-muted welcome-message">Welcome to Qmos</span>
         </li>
         @*<li class="dropdown">
             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -101,8 +101,8 @@
 
         <li>
             <a href="@Url.Action("Logout","Account")">
-                @*<i class="fa fa-sign-out"></i>*@ 
-                <i class="fas fa-sign-out-alt"></i>Salir
+                @*<i class="fa fa-sign-out"></i>*@
+                <i class="fas fa-sign-out-alt"></i>Log out
             </a>
         </li>
     </ul>
