--- a/Qmos.UI/Views/Roles/Index.cshtml
+++ b/Qmos.UI/Views/Roles/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
     @model IEnumerable<KCI_SecureModuleCL.Models.SM_ROLE>
-    ViewData["Title"] = "Roles";
-    ViewData["Root"] = "Administración";
+    ViewData["Title"] = "Role list";
+    ViewData["Root"] = "Mangement";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -19,16 +19,16 @@
                 <div class="ibox-content text-center p-md">
                     <div class="row">
                         <div class="col-lg-offset-10">
-                            <a asp-controller="Roles" asp-action="Get" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo</a>
+                            <a asp-controller="Roles" asp-action="Get" class="btn btn-success"><i class="fa fa-plus"></i> New</a>
                         </div>
                     </div>
                     <table class="table table-striped table-bordered table-hover dataTables" id="table">
                         <thead>
                             <tr>
-                                <th>Rol</th>
-                                <th>Aplicación</th>
-                                <th>Descripción</th>
-                                <th class="text-center">Acciones</th>
+                                <th>Role</th>
+                                <th>Application</th>
+                                <th>Description</th>
+                                <th class="text-center">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -46,8 +46,8 @@
                                         </td>
                                         <td>
                                             <div class="btn-group">
-                                                <a asp-controller="Roles" asp-action="GetUpdate" asp-route-id="@item.ID_Role" class="btn btn-primary"><i class="fa fa-edit"></i> Actualizar</a>
-                                                <a data-id="@item.ID_Role" class="btn btn-danger delete"><i class="fa fa-remove"></i> Eliminar</a>
+                                                <a asp-controller="Roles" asp-action="GetUpdate" asp-route-id="@item.ID_Role" class="btn btn-primary"><i class="fa fa-edit"></i> Update</a>
+                                                <a data-id="@item.ID_Role" class="btn btn-danger delete"><i class="fa fa-remove"></i> Remove</a>
                                             </div>
                                         </td>
                                     </tr>
