feat(): Estatus-> Status

--- a/Qmos.UI/Views/Users/Index.cshtml
+++ b/Qmos.UI/Views/Users/Index.cshtml
@@ -27,7 +27,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Email</th>
-                                <th>Estatus</th>
+                                <th>Status</th>
                                 <th class="text-center">Actions</th>
                             </tr>
                         </thead>
