--- a/Qmos.UI/Views/Dashboard/Index.cshtml
+++ b/Qmos.UI/Views/Dashboard/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "Main Dashboard";
+    ViewData["Title"] = "MTD Missed Heats";
     ViewData["Root"] = "Dashboards";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <link href="~/css/plugins/chartjs/Chart.min.css" rel="stylesheet" />
@@ -12,22 +11,44 @@
 <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-chosen.css" />
 
-<div class="col-md-3">
-Hola estoy aqui
+
+<div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-sm-4">
+
+        <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
+        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
+    </div>
 </div>
 
-    @section Scripts {
-        <script src="~/js/plugins/toastr/toastr.min.js"></script>
-        <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
-        <script src="~/js/plugins/chartjs/Chart.min.js"></script>
-        <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
-        <script src="~/js/plugins/moment/moment.min.js"></script>
-        <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
-        <script src="~/js/TimeSheet/dashboard.js"></script>
-        <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
+<div class="col-lg-12" data-rolable-url="dash-distributionHoursArea" data-rolable-name="Distribution hours by areas">
+        <div class="ibox float-e-margins">
+            <div class="ibox-title text-center">
+                <h3>MTD Missed Heats</h3>
+            </div>
+            <div class="ibox-content">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <canvas id="chartDistributionHoursArea" width="140" height="50" style="margin: 18px auto 0"></canvas>
+                    </div>
+                </div>
 
-        <script>
+            </div>
+        </div>
+    </div>
+
+@section Scripts {
+    <script src="~/js/plugins/toastr/toastr.min.js"></script>
+    <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
+    <script src="~/js/plugins/chartjs/Chart.min.js"></script>
+    <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+    <script src="~/js/plugins/moment/moment.min.js"></script>
+    <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
+    <script src="~/js/Qmos/dashboard.js"></script>
+    <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
+
+    <script>
             $(document).ready(function () {
+              GetDistributionHours('@Url.Action("GetDistributionHours")', 3, 3);
             });
-        </script>
-    }
+    </script>
+}
