--- a/Qmos.UI/Views/Shared/_Layout.cshtml
+++ b/Qmos.UI/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     <script>
     $(document).ready(function () {
 
-        var Elements = [];
+        @*var Elements = [];
         var ElementosRolables = $(document).find('[data-rolable-name]');
         jQuery.each(ElementosRolables, function (i, val) {
             Elements.push(
@@ -91,7 +91,7 @@
                     $('[data-rolable-url='+ val + ']').remove();
                 });
             }
-        });
+        });*@
     });
     </script>
     @RenderSection("scripts", required: false)
