--- a/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "MTD Missed Heats";
+    ViewData["Title"] = "MTD Delays";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -13,28 +13,27 @@
 
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-4">
+    <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
+        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()  (min per heat)</b></p>
     </div>
 </div>
 
-<div class="col-lg-12" data-rolable-url="dash-distributionHoursArea" data-rolable-name="Distribution hours by areas">
-        <div class="ibox float-e-margins">
-            <div class="ibox-title text-center">
-                <h3>MTD Missed Heats</h3>
-            </div>
-            <div class="ibox-content">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <canvas id="chartDistributionHoursArea" width="140" height="50" style="margin: 18px auto 0"></canvas>
-                    </div>
+<div class="col-lg-12" data-rolable-url="dash-MTDDelaysr" data-rolable-name="Crew">
+    <div class="ibox float-e-margins">
+        <div class="ibox-title text-center">
+            <h5>Crew</h5>
+        </div>
+        <div class="ibox-content">
+            <div class="row">
+                <div class="col-lg-12">
+                    <canvas id="chartMTDDelays" height="157" width="500"></canvas>
                 </div>
-
             </div>
         </div>
     </div>
+</div>
 
 @section Scripts {
     <script src="~/js/plugins/toastr/toastr.min.js"></script>
@@ -48,7 +47,7 @@
 
     <script>
             $(document).ready(function () {
-              GetDistributionHours('@Url.Action("GetDistributionHours")', 3, 3);
+              GetMTDDelays();
             });
     </script>
 }
