--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "KWh Per Scrap Ton";
+    ViewData["Title"] = "Iron Yield";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -16,19 +16,19 @@
     <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
+        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString() (POn)</b></p>
     </div>
 </div>
 
-<div class="col-lg-12" data-rolable-url="dash-KWhPerScrapTon" data-rolable-name="Crew">
+<div class="col-lg-12" data-rolable-url="dash-IronYield" data-rolable-name="Iron Yield">
     <div class="ibox float-e-margins">
         <div class="ibox-title text-center">
-            <h5>KWh Per Scrap Ton</h5>
+            <h5>Iron Yield (POn)</h5>
         </div>
         <div class="ibox-content">
             <div class="row">
                 <div class="col-lg-12">
-                    <canvas id="chartKWhPerScrapTon" height="157" width="500"></canvas>
+                    <canvas id="chartIronYield" height="157" width="500"></canvas>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
 
     <script>
             $(document).ready(function () {
-              GetKWhPerScrapTon();
+              GetIronYield();
             });
     </script>
 }
