feat(): TargetPPM, TargetTemp and TapWtTarget

--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -26,9 +26,17 @@
             <h5>Iron Yield (POn)</h5>
         </div>
         <div class="ibox-content">
+            <div class="col-lg-3 col-md-4 stat-percent">
+                <div class="ibox ">
+                    <div class=" text-center">
+                        <h1 class="no-margins text-danger">0.93</h1>
+                        <small>Average of Yield</small>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <canvas id="chartIronYield" height="157" width="500"></canvas>
+                    <canvas id="chartIronYield" height="157" width="600"></canvas>
                 </div>
             </div>
         </div>
