--- a/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
+++ b/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
@@ -27,8 +27,18 @@
         </div>
         <div class="ibox-content">
             <div class="row">
+                <div class="col-lg-3 col-md-4 stat-percent">
+                    <div class="ibox ">
+                        <div class=" text-center">
+                            <h1 class="no-margins text-danger">162.22</h1>
+                            <small>Average of TonHour(Pon)</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
-                    <canvas id="chartScrapTonPerHour" height="157" width="500"></canvas>
+                    <canvas id="chartScrapTonPerHour" height="157" width="600"></canvas>
                 </div>
             </div>
         </div>
