--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "KWh Per Scrap Ton";
+    ViewData["Title"] = "Target PPM";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -16,33 +16,33 @@
     <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
+        <p> @ViewData["Root"].ToString() / <b>Tap PPM - @ViewData["Title"].ToString()</b></p>
     </div>
 </div>
 
-<div class="col-lg-12" data-rolable-url="dash-KWhPerScrapTon" data-rolable-name="Crew">
+<div class="col-lg-12" data-rolable-url="dash-TargetPPM" data-rolable-name="Tap PPM - TargetPPM">
     <div class="ibox float-e-margins">
         <div class="ibox-title text-center">
-            <h5>KWh Per Scrap Ton</h5>
+            <h5>Tap PPM - Target PPM</h5>
         </div>
-        <div class="ibox-content">
+        <div class="ibox-content"> 
             <div class="row">
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger">355.22</h1>
-                            <small>Average of KwhTon</small>
+                            <h1 class="no-margins text-danger">0.29</h1>                           
+                            <small>Average of O2InSpec</small>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <canvas id="chartKWhPerScrapTon" height="157" width="600"></canvas>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <canvas id="chartTargetPPM" height="157" width="600"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
 
 @section Scripts {
@@ -57,7 +57,7 @@
 
     <script>
             $(document).ready(function () {
-              GetKWhPerScrapTon();
+              GetTargetPPM();
             });
     </script>
 }
