--- a/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "KWh Per Scrap Ton";
+    ViewData["Title"] = "MTD Production";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -13,17 +13,17 @@
 
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-6">
+    <div class="col-sm-4">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
         <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
     </div>
 </div>
 
-<div class="col-lg-12" data-rolable-url="dash-KWhPerScrapTon" data-rolable-name="Crew">
+<div class="col-lg-12" data-rolable-url="dash-MTDTapTempand02PPM" data-rolable-name="Crew">
     <div class="ibox float-e-margins">
         <div class="ibox-title text-center">
-            <h5>KWh Per Scrap Ton</h5>
+            <h5>MTD Production</h5>
             <div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
@@ -32,18 +32,8 @@
         </div>
         <div class="ibox-content">
             <div class="row">
-                <div class="col-lg-3 col-md-4 stat-percent">
-                    <div class="ibox ">
-                        <div class=" text-center">
-                            <h1 class="no-margins text-danger">355.22</h1>
-                            <small>Average of KwhTon</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-12">
-                    <canvas id="chartKWhPerScrapTon" height="157" width="600"></canvas>
+                    <canvas id="chartMTDProduction" height="157" width="500"></canvas>
                 </div>
             </div>
         </div>
@@ -61,8 +51,8 @@
     <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
 
     <script>
-            $(document).ready(function () {
-              GetKWhPerScrapTon();
-            });
+        $(document).ready(function () {
+            GetMTDProduction();
+        });
     </script>
 }
