--- a/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
+++ b/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
@@ -24,6 +24,11 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title text-center">
             <h5>Scrap Ton per Hour (POn)</h5>
+            <div class="ibox-tools">
+                <a class="" href="">
+                    <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
+                </a>
+            </div>
         </div>
         <div class="ibox-content">
             <div class="row">
