feat(TapWtTarget): Consumir API http://localhost:8002/api/TapWtTapWtTarget

--- a/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
+++ b/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
@@ -35,7 +35,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger">128.84</h1>
+                            <h1 class="no-margins text-danger" id="Average">0.00</h1>
                             <small>Average of Billet Tons</small>
                         </div>
                     </div>
