--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -14,27 +14,25 @@
 
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-6">
-
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString() (POn)</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-IronYield" data-rolable-name="Iron Yield">
     <div class="ibox ">
         <div class="ibox-title">
-            <h5>Iron Yield (POn)</h5>
-            <div class="ibox-tools">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
                 </a>
-            </div>
+            </div>*@
         </div>
         <div class="ibox-content">
             <div class="col-lg-3 col-md-4 stat-percent">
                 <div class="ibox ">
                     <div class=" text-center">
-                        <h1 class="no-margins text-danger" id="Average">0.00</h1>
+                        <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
                         <small>Average of Yield</small>
                     </div>
                 </div>
