--- a/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "MTD Average";
+    ViewData["Title"] = "MTD Average (per scrap ton)";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -15,21 +15,19 @@
 
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-6">
-
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString() (per scrap ton)</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-MTDAverage" data-rolable-name="MTD Average">
     <div class="ibox ">
         <div class="ibox-title">
-            <h5>MTD Average (per scrap ton)</h5>
-            <div class="ibox-tools">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
                 </a>
-            </div>
+            </div>*@
         </div>
         <div class="ibox-content">
             <div class="row">
