--- a/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "MTD Delays";
+    ViewData["Title"] = "MTD Delays (min per heat)";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -16,19 +16,18 @@
     <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()  (min per heat)</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-MTDDelaysr" data-rolable-name="Crew">
     <div class="ibox float-e-margins">
-        <div class="ibox-title text-center">
-            <h5>Crew</h5>
-            <div class="ibox-tools">
+        <div class="ibox-title">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
                 </a>
-            </div>
+            </div>*@
         </div>
         <div class="ibox-content">
             <div class="row">
