--- a/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
@@ -14,31 +14,29 @@
 
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-4">
-
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>@ViewData["Title"].ToString()</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-MTDMissedHeats" data-rolable-name="Crew">
-        <div class="ibox float-e-margins">
-            <div class="ibox-title">
-                <h5>Crew</h5>
-                <div class="ibox-tools">
-                    <a class="" href="">
-                        <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
-                    </a>
-                </div>
-            </div>
-            <div class="ibox-content">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <canvas id="chartMTDMissedHeats" width="140" height="50" style="margin: 18px auto 0"></canvas>
-                    </div>
-                </div>
-
-            </div>
+    <div class="ibox float-e-margins">
+        <div class="ibox-title">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
+                <a class="" href="">
+                    <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
+                </a>
+            </div>*@
         </div>
+        <div class="ibox-content">
+            <div class="row">
+                <div class="col-lg-12">
+                    <canvas id="chartMTDMissedHeats" width="140" height="50" style="margin: 18px auto 0"></canvas>
+                </div>
+            </div>
+
+        </div>
+    </div>
     </div>
 
 @section Scripts {
