--- a/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
+++ b/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "TapWtTarget";
+    ViewData["Title"] = "TapWt - TapWtTarget";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -16,26 +16,25 @@
     <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>TapWt - @ViewData["Title"].ToString()</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-TargetTemp" data-rolable-name="TapWt - TapWtTarget">
     <div class="ibox float-e-margins">
-        <div class="ibox-title text-center">
-            <h5>TapWt - TapWtTarget</h5>
-            <div class="ibox-tools">
+        <div class="ibox-title">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
                 </a>
-            </div>
+            </div>*@
         </div>
         <div class="ibox-content">
             <div class="row">
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger" id="Average">0.00</h1>
+                            <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
                             <small>Average of Billet Tons</small>
                         </div>
                     </div>
