--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "Target PPM";
+    ViewData["Title"] = "Tap PPM - Target PPM";
     ViewData["Root"] = "Dashboards";
 }
 
@@ -16,38 +16,37 @@
     <div class="col-sm-6">
 
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
-        <p> @ViewData["Root"].ToString() / <b>Tap PPM - @ViewData["Title"].ToString()</b></p>
     </div>
 </div>
 
 <div class="col-lg-12" data-rolable-url="dash-TargetPPM" data-rolable-name="Tap PPM - TargetPPM">
     <div class="ibox float-e-margins">
-        <div class="ibox-title text-center">
-            <h5>Tap PPM - Target PPM</h5>
-            <div class="ibox-tools">
+        <div class="ibox-title">
+            <h5>Date 07-07-2020 13:10:00</h5>
+            @*<div class="ibox-tools">
                 <a class="" href="">
                     <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
                 </a>
-            </div>
+            </div>*@
         </div>
-        <div class="ibox-content"> 
+        <div class="ibox-content">
             <div class="row">
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger" id="Average">0.00</h1>                           
+                            <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
                             <small>Average of O2InSpec</small>
                         </div>
                     </div>
                 </div>
             </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <canvas id="chartTargetPPM" height="157" width="600"></canvas>
-                    </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <canvas id="chartTargetPPM" height="157" width="600"></canvas>
                 </div>
             </div>
         </div>
+    </div>
 </div>
 
 @section Scripts {
