--- a/Qmos.UI/Views/Shared/_Layout.cshtml
+++ b/Qmos.UI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>Qmos</title>
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    @*<link href="~/css/all.css" rel="stylesheet" />*@
+  @*  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">*@
     @*<link rel="icon" type="image/png" href="~/images/favicon.ico" />*@
 
     <link rel="stylesheet" href="~/css/plugins/sweetalert/sweetalert.css">
