--- a/Qmos.UI/Views/Shared/_LayoutProducts.cshtml
+++ b/Qmos.UI/Views/Shared/_LayoutProducts.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-       QMOS
+        QMOS
     </title>
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    @*<link rel="icon" type="image/png" href="~/images/favicon.ico" />*@
+    @*<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="~/images/favicon.ico" />*@
     <link rel="stylesheet" href="~/css/plugins/sweetalert/sweetalert.css">
     <link rel="stylesheet" href="~/css/plugins/dataTables/datatables.min.css" />
     <link rel="stylesheet" href="~/css/plugins/toastr/toastr.min.css" />
