--- a/Qmos.UI/Views/UpdateTime/Index.cshtml
+++ b/Qmos.UI/Views/UpdateTime/Index.cshtml
@@ -14,11 +14,13 @@
         <div class="col-lg-offset-2 col-lg-8">
             <div class="ibox">
                 <div class="ibox-content text-center p-md">
+                    @if (Model.Count()==0) { 
                     <div class="row">
                         <div class="col-lg-offset-10">
                             <a asp-controller="UpdateTime" asp-action="Get" class="btn btn-success"><i class="fa fa-plus"></i> New</a>
                         </div>
                     </div>
+                    }
                     <table class="table table-striped table-bordered table-hover dataTables" id="table">
                         <thead>
                             <tr>
