--- a/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Qmos.UI.ViewModels.UpdateTimeViewModel
 @using Microsoft.AspNetCore.Mvc;
 @{
     ViewData["Title"] = "MTD Tap Temp and 02 PPM";
@@ -23,10 +23,10 @@
         <div class="ibox-title">
             <h5>Date 07-07-2020 13:10:00</h5>
             @*<div class="ibox-tools">
-                <a class="" href="">
-                    <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
-                </a>
-            </div>*@
+                    <a class="" href="">
+                        <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
+                    </a>
+                </div>*@
         </div>
         <div class="ibox-content">
             <div class="row">
@@ -51,6 +51,13 @@
     <script>
         $(document).ready(function () {
             GetMTDTapTempand02PPM();
+            //Every X seconds (XXXX milliseconds) the refresh function will be executed
+            var milliseconds = '@Model.TIMEMILLISECONDS';
+            setTimeout(refresh, milliseconds);
         });
+        function refresh() {
+            //Refresh the page
+            location.reload();
+        }
     </script>
 }
