--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -60,8 +60,10 @@
         $(document).ready(function () {
             GetIronYield();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
+            if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = '@Model.TIMEMILLISECONDS';
-            setTimeout(refresh, milliseconds);
+                setTimeout(refresh, milliseconds);
+                }
         });
         function refresh() {
             //Refresh the page
