--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -63,8 +63,10 @@
         $(document).ready(function () {
             GetKWhPerScrapTon();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
+            if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = '@Model.TIMEMILLISECONDS';
-            setTimeout(refresh, milliseconds);
+                setTimeout(refresh, milliseconds);
+                }
         });
         function refresh() {
             //Refresh the page
