--- a/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
@@ -59,8 +59,10 @@
         $(document).ready(function () {
             GetMTDAverage();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
+            if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = '@Model.TIMEMILLISECONDS';
-            setTimeout(refresh, milliseconds);
+                setTimeout(refresh, milliseconds);
+                }
         });
         function refresh() {
             //Refresh the page
