--- a/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
@@ -52,8 +52,10 @@
         $(document).ready(function () {
             GetMTDTapTempand02PPM();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
+            if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = '@Model.TIMEMILLISECONDS';
-            setTimeout(refresh, milliseconds);
+                setTimeout(refresh, milliseconds);
+                }
         });
         function refresh() {
             //Refresh the page
