feat(): Time counter

--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -22,12 +22,12 @@
 <div class="col-lg-12" data-rolable-url="dash-TargetPPM" data-rolable-name="Tap PPM - TargetPPM">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5>Date 07-07-2020 13:10:00</h5>
-            @*<div class="ibox-tools">
-                    <a class="" href="">
-                        <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
-                    </a>
-                </div>*@
+            <h5 style=" font-size: 150%;">Date 07-07-2020 13:10:00</h5>
+            <div class="ibox-tools">
+                <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
+                    <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
+                </div>
+            </div>
         </div>
         <div class="ibox-content">
             <div class="row">
