--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -11,7 +11,6 @@
 <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-chosen.css" />
 
-
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-6">
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
@@ -21,12 +20,12 @@
 <div class="col-lg-12" data-rolable-url="dash-IronYield" data-rolable-name="Iron Yield">
     <div class="ibox ">
         <div class="ibox-title">
-            <h5>Date 07-07-2020 13:10:00</h5>
-            @*<div class="ibox-tools">
-                    <a class="" href="">
-                        <span class="text-color" style="color:#000000">Date 2020-06-01 T06:00:00</span>
-                    </a>
-                </div>*@
+            <h5 style=" font-size: 150%;">Date 07-07-2020 13:10:00</h5>
+            <div class="ibox-tools">
+                <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
+                    <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
+                </div>
+            </div>
         </div>
         <div class="ibox-content">
             <div class="col-lg-3 col-md-4 stat-percent">
@@ -56,7 +55,7 @@
     <script src="~/js/Qmos/dashboard.js"></script>
     <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
 
-    <script>
+    <script type="text/javascript">
         $(document).ready(function () {
             GetIronYield();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
@@ -65,9 +64,6 @@
                 setTimeout(refresh, milliseconds);
                 }
         });
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
+
     </script>
 }
