--- a/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
@@ -53,15 +53,10 @@
                 GetMTDMissedHeats();
                 //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
-            var milliseconds = '@Model.TIMEMILLISECONDS';
+            var milliseconds = @Model.TIMEMILLISECONDS;
                 setTimeout(refresh, milliseconds);
                 }
 
             });
-
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
     </script>
 }
