--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -34,7 +34,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
+                            <h1 class="no-margins font-bold" style="color:red;"id="Average">0.00</h1>
                             <small>Average of KwhTon</small>
                         </div>
                     </div>
@@ -54,6 +54,7 @@
     <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
     <script src="~/js/plugins/chartjs/Chart.min.js"></script>
     <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+    <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
     <script src="~/js/plugins/moment/moment.min.js"></script>
     <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
     <script src="~/js/Qmos/dashboard.js"></script>
@@ -64,13 +65,9 @@
             GetKWhPerScrapTon();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
-            var milliseconds = '@Model.TIMEMILLISECONDS';
+            var milliseconds = @Model.TIMEMILLISECONDS;
                 setTimeout(refresh, milliseconds);
                 }
         });
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
     </script>
 }
