--- a/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
@@ -54,13 +54,9 @@
             GetMTDDelays();
            //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
-            var milliseconds = '@Model.TIMEMILLISECONDS';
+            var milliseconds = @Model.TIMEMILLISECONDS;
                 setTimeout(refresh, milliseconds);
                 }
         });
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
     </script>
 }
