--- a/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
+++ b/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
@@ -33,7 +33,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
+                            <h1 class="no-margins font-bold" style="color:red;" id="Average">0.00</h1>
                             <small>Average of TonHour(Pon)</small>
                         </div>
                     </div>
@@ -53,6 +53,7 @@
     <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
     <script src="~/js/plugins/chartjs/Chart.min.js"></script>
     <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+    <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
     <script src="~/js/plugins/moment/moment.min.js"></script>
     <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
     <script src="~/js/Qmos/dashboard.js"></script>
@@ -63,13 +64,9 @@
             GetScrapTonPerHour();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
-            var milliseconds = '@Model.TIMEMILLISECONDS';
+            var milliseconds = @Model.TIMEMILLISECONDS;
                 setTimeout(refresh, milliseconds);
                 }
         });
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
     </script>
 }
