--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -34,7 +34,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins text-danger font-bold" id="Average">0.00</h1>
+                            <h1 class="no-margins font-bold" style="color:red;" id="Average">0.00</h1>
                             <small>Average of O2InSpec</small>
                         </div>
                     </div>
@@ -64,13 +64,9 @@
             GetTargetPPM();
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
-            var milliseconds = '@Model.TIMEMILLISECONDS';
+            var milliseconds = @Model.TIMEMILLISECONDS;
                 setTimeout(refresh, milliseconds);
                 }
         });
-        function refresh() {
-            //Refresh the page
-            location.reload();
-        }
     </script>
 }
