feat(): New Production

--- a/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
@@ -43,6 +43,7 @@
     <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
     <script src="~/js/plugins/chartjs/Chart.min.js"></script>
     <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+    <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
     <script src="~/js/plugins/moment/moment.min.js"></script>
     <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
     <script src="~/js/Qmos/dashboard.js"></script>
