feat(): Copyright © 2020 | Optimus Steel

--- a/Qmos.UI/Views/Shared/_FooterPartial.cshtml
+++ b/Qmos.UI/Views/Shared/_FooterPartial.cshtml
@@ -4,7 +4,7 @@
         </div>*@
     <div class="row">
         <div class="col-lg-6 text-left">
-            <strong>Copyright &copy; 2020 </strong> | QMOS
+            <strong>Copyright &copy; 2020 </strong> | Optimus Steel
         </div>
         <div class="col-lg-5 offset-1 text-right">
         </div>
